##########################################
# libvgm
##########################################

if ("${CMAKE_C_BYTE_ORDER}" STREQUAL "BIG_ENDIAN")
	add_definitions("-D VGM_BIG_ENDIAN")
else()
	add_definitions("-D VGM_LITTLE_ENDIAN")
endif()

add_library(
  libvgm
  emu/dac_control.c
  emu/panning.c
  emu/Resampler.c
  emu/SoundEmu.c
  emu/cores/sn764intf.c
  emu/cores/sn76496.c
  emu/cores/2413intf.c
  emu/cores/emu2413.c
  emu/cores/2612intf.c
  emu/cores/fmopn.c
  emu/cores/ym2151.c
  emu/cores/2151intf.c
  emu/cores/segapcm.c
  emu/cores/rf5cintf.c
  emu/cores/rf5c68.c
  emu/cores/opnintf.c
  emu/cores/ymdeltat.c
  emu/cores/oplintf.c
  emu/cores/adlibemu_opl2.c
  emu/cores/fmopl.c
  emu/cores/262intf.c
  emu/cores/adlibemu_opl3.c
  emu/cores/ymf278b.c
  emu/cores/ymz280b.c
  emu/cores/ymf271.c
  emu/cores/ayintf.c
  emu/cores/emu2149.c
  emu/cores/pwm.c
  emu/cores/gb.c
  emu/cores/nesintf.c
  emu/cores/np_nes_apu.c
  emu/cores/np_nes_dmc.c
  emu/cores/np_nes_fds.c
  emu/cores/multipcm.c
  emu/cores/upd7759.c
  emu/cores/okim6258.c
  emu/cores/okim6295.c
  emu/cores/okiadpcm.c
  emu/cores/k051649.c
  emu/cores/k054539.c
  emu/cores/c6280intf.c
  emu/cores/Ootake_PSG.c
  emu/cores/c140.c
  emu/cores/c219.c
  emu/cores/k053260.c
  emu/cores/pokey.c
  emu/cores/qsoundintf.c
  emu/cores/qsound_mame.c
  emu/cores/scsp.c
  emu/cores/scspdsp.c
  emu/cores/vsu.c
  emu/cores/saaintf.c
  emu/cores/saa1099_mame.c
  emu/cores/es5503.c
  emu/cores/es5506.c
  emu/cores/x1_010.c
  emu/cores/c352.c
  emu/cores/iremga20.c
  emu/cores/mikey.c
  player/dblk_compr.c
  player/helper.c
  player/playerbase.cpp
  player/vgmplayer_cmdhandler.cpp
  player/vgmplayer.cpp
  player/playera.cpp
  util/DataLoader.c
  util/MemoryLoader.c
)