project(
  libxmp
  LANGUAGES C
  VERSION 0.1.0
)

set(CMAKE_CC_FLAGS "-O2 -DINLINE_G=inline -Wall")
if(WIN32 AND NOT MSYS)
  set(CMAKE_CC_FLAGS "${CMAKE_CC_FLAGS} /fp:fast /EHs")
else()
  set(CMAKE_CC_FLAGS "${CMAKE_CC_FLAGS} -ffast-math -fno-strict-aliasing")
endif()

add_library(
  libxmp
  loaders/669_load.c
  loaders/abk_load.c
  loaders/amf_load.c
  loaders/arch_load.c
  loaders/asif.c
  loaders/asylum_load.c
  loaders/chip_load.c
  loaders/coco_load.c
  loaders/common.c
  loaders/dbm_load.c
  loaders/digi_load.c
  loaders/dt_load.c
  loaders/emod_load.c
  loaders/far_load.c
  loaders/flt_load.c
  loaders/fnk_load.c
  loaders/gal4_load.c
  loaders/gal5_load.c
  loaders/gdm_load.c
  loaders/hmn_load.c
  loaders/ice_load.c
  loaders/iff.c
  loaders/imf_load.c
  loaders/ims_load.c
  loaders/it_load.c
  loaders/itsex.c
  loaders/liq_load.c
  loaders/masi_load.c
  loaders/mdl_load.c
  loaders/med2_load.c
  loaders/med3_load.c
  loaders/med4_load.c
  loaders/mfp_load.c
  loaders/mgt_load.c
  loaders/mmd1_load.c
  loaders/mmd3_load.c
  loaders/mmd_common.c
  loaders/mod_load.c
  loaders/mtm_load.c
  loaders/no_load.c
  loaders/okt_load.c
  loaders/psm_load.c
  loaders/pt3_load.c
  loaders/ptm_load.c
  loaders/rtm_load.c
  loaders/s3m_load.c
  loaders/sample.c
  loaders/sfx_load.c
  loaders/st_load.c
  loaders/stim_load.c
  loaders/stm_load.c
  loaders/stx_load.c
  loaders/sym_load.c
  loaders/ult_load.c
  loaders/umx_load.c
  loaders/voltable.c
  loaders/xm_load.c
  control.c
  dataio.c
  effects.c
  extras.c
  filter.c
  format.c
  hio.c
  hmn_extras.c
  lfo.c
  load.c
  load_helpers.c
  md5.c
  med_extras.c
  memio.c
  misc.c
  mix_all.c
  mix_paula.c
  mixer.c
  mkstemp.c
  period.c
  player.c
  read_event.c
  scan.c
  smix.c
  tempfile.c
  virtual.c
  win32.c  
)